# zxcvbn-c

./: .gitignore  AUTHORS  COPYING  Makefile.am  binding.gyp  configure.ac  libzxcvbn.pc.in  makefile  test.js  zxcvbn.c
debian/: README.Debian  README.source  changelog  control  copyright  init.d.ex  libzxcvbn.symbols  libzxcvbn0-dev.lintian-overrides  libzxcvbn0.lintian-overrides  libzxcvbn0.symbols  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex  watch.ex  zxcvbn-c.cron.d.ex  zxcvbn-c.default.ex  zxcvbn-c.doc-base.EX
debian/source/: lintian-overrides
